updating our details

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <h1>Where I'm From</h1>
       <p>Algeria</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>PLay basketball, soccer, boxing</p>
+      <p>Play basketball, soccer, boxing</p>
       <h1>What's your dream job?</h1>
-      <p>Business a software program and make a business out of it</p>
+      <p>Build a software program and make a business out of it</p>
       <h1>Where do you live?</h1>
       <p>I live in Manhattan New York </p>
       <h1>Why do you want to be a web developer?</h1>
